bootstrap/argocd-config/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd
  namespace: argocd
  annotations:
    cert-manager.io/cluster-issuer: tesseract-ca-issuer
    traefik.ingress.kubernetes.io/router.middlewares: argocd-argocd-https@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: argocd.home
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  number: 80
  tls:
    - hosts:
        - argocd.home
      secretName: argocd-tls
