bootstrap/argocd-config/pihole-ingress.yaml
---
apiVersion: v1
kind: Endpoints
metadata:
  name: pihole
  namespace: default
subsets:
  - addresses:
      - ip: 192.168.1.127
    ports:
      - port: 8053
---
apiVersion: v1
kind: Service
metadata:
  name: pihole
  namespace: default
spec:
  ports:
    - port: 80
      targetPort: 8053
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pihole
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: tesseract-ca-issuer
spec:
  ingressClassName: traefik
  rules:
    - host: pihole.home
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pihole
                port:
                  number: 80
  tls:
    - hosts:
        - pihole.home
      secretName: pihole-tls
